<resources>
    <string name="app_name">gastroClient</string>

    <string name="transition_name_main_bar" translatable="false">transition_name_main_bar</string>

    <string name="menu_pay_add_items">Add all items to pay</string>
    <string name="menu_history_orders">View last order</string>
    <string name="menu_history_checks">View last check</string>
    <string name="menu_report_daily">Daily report</string>
    <string name="menu_logout">Logout</string>

    <string name="title_sign_in">Sign in</string>
    <string name="button_sign_in">Sign in</string>
    <string name="error_sign_in">wrong password</string>

    <string name="title_open_tables">Open tables</string>
    <string name="button_add_order">Add order</string>
    <string name="button_add_selected_items">Add to order</string>

    <string name="title_order_add">Add order</string>
    <string name="order_add_set_table_subtitle">Set table</string>
    <string name="order_add_set_table_action_title">Input</string>
    <string name="order_add_set_table_hint_id">Table №</string>
    <string name="order_add_set_table_hint_part">Part</string>
    <string name="order_add_set_table_submit_button">Set</string>

    <string name="order_list_action_select_menu_folder">Select menu folder</string>

    <string name="order_add_pre_items_action_select_menu_items">Select menu items</string>

    <string name="order_add_custom_item_action_select_menu_items">Input item</string>
    <string name="order_add_custom_item_hint_name">Name</string>
    <string name="order_add_custom_item_hint_price">Price</string>
    <string name="order_add_custom_item_add_button">Add</string>
    <string name="order_add_custom_item_back_button">Back</string>
    <plurals name="pay_list_item_count_text">
        <item quantity="one">%d item</item>
        <item quantity="other">%d items</item>
    </plurals>

    <string name="pay_list_title">Open table</string>
    <string name="pay_list_action_add_pay_items">select and pay</string>

    <string name="title_split_table">Split table</string>
    <string name="title_split_table_action_title">to table</string>

    <string name="handlingmsg_warn_receipt_near_end">Roll paper is nearly end</string>
    <string name="handlingmsg_warn_battery_near_end">Battery level of printer is low</string>
    <string name="handlingmsg_err_no_response">Please check the connection of the printer and the mobile terminal\nConnection get lost</string>
    <string name="handlingmsg_err_cover_open">Please close roll paper cover</string>
    <string name="handlingmsg_err_receipt_end">Please check roll paper</string>
    <string name="handlingmsg_err_paper_feed">Please release a paper feed switch</string>
    <string name="handlingmsg_err_autocutter">Please remove jammed paper and close roll paper cover\nRemove any jammed paper or foreign substances in the printer, and then turn the printer off and turn the printer on again</string>
    <string name="handlingmsg_err_need_recover">Then, If the printer doesn\'t recover from error, please cycle the power switch</string>
    <string name="handlingmsg_err_unrecover">Please cycle the power switch of the printer\nIf same errors occurred even power cycled, the printer may out of order</string>
    <string name="handlingmsg_err_overheat">Please wait until error LED of the printer turns off</string>
    <string name="handlingmsg_err_head">Print head of printer is hot</string>
    <string name="handlingmsg_err_motor">Motor Driver IC of printer is hot</string>
    <string name="handlingmsg_err_battery">Battery of printer is hot</string>
    <string name="handlingmsg_err_wrong_paper">Please set correct roll paper</string>
    <string name="handlingmsg_err_battery_real_end">Please connect AC adapter or change the battery.\nBattery of printer is almost empty</string>
    <string name="handlingmsg_err_offline">Printer is offline</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification_print_order_success">Print order success</string>
    <string name="dismiss">Dismiss</string>


</resources>
