<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--    <item-->
    <!--        android:id="@+id/menu_pay_add_items"-->
    <!--        android:icon="@drawable/ic_playlist_add"-->
    <!--        android:title="@string/menu_pay_add_items"-->
    <!--        app:showAsAction="ifRoom" />-->
    <group android:id="@+id/menu_group_view">
        <item
            android:id="@+id/menu_history_orders"
            android:title="@string/menu_history_orders"
            app:showAsAction="never" />
        <item
            android:id="@+id/menu_history_checks"
            android:title="@string/menu_history_checks"
            app:showAsAction="never" />
    </group>
    <group android:id="@+id/menu_group_report">
        <item
            android:id="@+id/menu_report_day"
            android:title="@string/menu_report_daily"
            app:showAsAction="never" />
    </group>

    <item
        android:id="@+id/menu_logout"
        android:title="@string/menu_logout"
        app:showAsAction="never" />
</menu>