<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/order_add_table_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.order.ui.OrderAddTableFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/order_set_table_app_bar_layout"
        style="@style/AppCollapsingStyle.AppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            style="@style/AppCollapsingStyle.CollapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/collapsing_toolbar_layout_height"
            app:title="@string/title_order_add">

            <ImageView
                style="@style/AppCollapsingStyle.ImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/restaurant_bar"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/collapsing_toolbar_subtitle_text"
                style="@style/AppCollapsingStyle.SubTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_add_set_table_subtitle"
                tools:text="Table 21/2" />

            <TextView
                android:id="@+id/collapsing_toolbar_action_text"
                style="@style/AppCollapsingStyle.ActionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_add_set_table_action_title" />

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/order_set_table_toolbar"
                style="@style/AppCollapsingStyle.Toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/order_table_custom_input_layout"
                style="@style/TextInputLayoutAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:hint="@string/order_add_set_table_hint_id"
                app:layout_constraintBottom_toBottomOf="@+id/order_table_custom_slash_text"
                app:layout_constraintEnd_toStartOf="@+id/order_table_custom_slash_text"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/order_table_custom_slash_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/order_table_custom_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:cursorVisible="true"
                    android:ems="4"
                    android:enabled="true"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/order_table_custom_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/order_add_set_table_submit_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/order_table_custom_slash_text" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/order_table_custom_part_input_layout"
                style="@style/TextInputLayoutAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="@string/order_add_set_table_hint_part"
                app:layout_constraintBottom_toBottomOf="@+id/order_table_custom_slash_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/order_table_custom_slash_text"
                app:layout_constraintTop_toTopOf="@+id/order_table_custom_slash_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="3"
                    android:imeOptions="actionDone"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/order_table_custom_slash_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="/"
                android:textSize="42sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>