<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/order_add_item_coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    tools:context=".feature.order.ui.OrderAddItemFragment">

        <!--    https://stackoverflow.com/questions/55512896/collapsingtoolbarlayout-not-collapsing-when-softkeyboard-is-visible-->

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/order_add_items_app_bar_layout"
            style="@style/AppCollapsingStyle.AppBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                style="@style/AppCollapsingStyle.CollapsingToolbarLayout"
                android:id="@+id/order_add_item_collapsing_toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/collapsing_toolbar_layout_height">

                <ImageView
                    style="@style/AppCollapsingStyle.ImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/menu_pre_items"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/collapsing_toolbar_subtitle_text"
                    style="@style/AppCollapsingStyle.SubTitleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Table 21/2" />

                <TextView
                    android:id="@+id/collapsing_toolbar_action_text"
                    style="@style/AppCollapsingStyle.ActionTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/order_add_custom_item_action_select_menu_items" />

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/order_add_item_toolbar"
                    style="@style/AppCollapsingStyle.Toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_scrollview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/order_list_add_item_name_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:nextFocusDown="@id/order_list_add_item_price_layout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/order_add_custom_item_hint_name"
                        android:imeOptions="actionNext"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/order_list_add_item_price_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/order_list_add_item_name_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/order_add_custom_item_hint_price"
                        android:imeOptions="actionDone"
                        android:inputType="numberDecimal" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/order_list_add_item_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/order_add_custom_item_add_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/order_list_add_item_price_layout" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/order_list_add_item_back_button"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/order_add_custom_item_back_button"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/order_list_add_item_price_layout" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
