<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/split_select_table_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.order.ui.OrderAddTableFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/split_select_table_app_bar_layout"
        style="@style/AppCollapsingStyle.AppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            style="@style/AppCollapsingStyle.CollapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/collapsing_toolbar_layout_height"
            app:title="@string/title_split_table">

            <ImageView
                style="@style/AppCollapsingStyle.ImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/restaurant_bar"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/collapsing_toolbar_subtitle_text"
                style="@style/AppCollapsingStyle.SubTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_add_set_table_subtitle"
                tools:text="Table 21/2" />

            <TextView
                android:id="@+id/collapsing_toolbar_action_text"
                style="@style/AppCollapsingStyle.ActionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_split_table_action_title" />

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/split_select_table_toolbar"
                style="@style/AppCollapsingStyle.Toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/split_select_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:layout_anchor="@id/split_select_table_app_bar_layout"
        app:layout_anchorGravity="bottom">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/split_select_custom_input_layout"
            style="@style/TextInputLayoutAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/order_add_set_table_hint_id"
            app:layout_constraintBottom_toBottomOf="@+id/split_select_custom_slash_text"
            app:layout_constraintEnd_toStartOf="@+id/split_select_custom_slash_text"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/split_select_custom_slash_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/split_select_custom_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:ems="4"
                android:enabled="true"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/split_select_custom_part_input_layout"
            style="@style/TextInputLayoutAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:hint="@string/order_add_set_table_hint_part"
            app:layout_constraintBottom_toBottomOf="@+id/split_select_custom_slash_text"
            app:layout_constraintEnd_toStartOf="@+id/split_select_table_submit_button"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/split_select_custom_slash_text"
            app:layout_constraintTop_toTopOf="@+id/split_select_custom_slash_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="3"
                android:imeOptions="actionDone"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/split_select_custom_slash_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="/"
            android:textSize="42sp"
            app:layout_constraintEnd_toStartOf="@+id/split_select_table_submit_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="open tables"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/split_select_custom_slash_text"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/split_select_table_submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="split"
            app:layout_constraintBottom_toBottomOf="@+id/split_select_custom_slash_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/split_select_custom_slash_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/split_select_open_tables_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="568dp"
        android:layout_gravity="top"
        android:layout_marginTop="104dp"
        android:clipToPadding="false"
        android:paddingBottom="72dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:listitem="@layout/item_open_tables" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>